--- a/style.css
+++ b/style.css
@@ -1,5 +1,87 @@
-.app-title{  
+body{  
+     background-image :url("Pic/frank-mckenna-OD9EOzfSOh0-unsplash.jpg")
+    ;  
+}  
+  
+.container{  
+    width: 300px;      
+    background-color: rgba(255, 255, 255, 0.301);  
+      
+    display: block;  
+    margin: 0 auto;  
+      
+    border-radius: 20px;  
+    padding-bottom : 50px;
+    padding-top: 30px;  
+}  
+  
+ 
+  
+.notification{  
+    background-color: #f8d7da;  
+    display: none;  
+}  
+  
+.notification p{  
+    color: #721c24;  
+    font-size: 1.2em;  
+    margin: 0;  
+    text-align: center;  
+    padding: 10px 0;  
+}  
+  
+.weather-container{  
     width: 300px;  
-    height: 50px;  
-    border-radius: 20px 20px 0 0;  
-}
+    height: 260px;  
+     
+}  
+  
+.weather-icon{  
+    width: 300px;  
+    height: 128px;  
+}  
+  
+.weather-icon img{  
+    display: block;  
+    margin: 0 auto;  
+}  
+  
+.temperature-value{  
+    width: 300px;  
+    height:60px;  
+}  
+  
+.temperature-value p{  
+    padding: 0;  
+    margin: 0;  
+    color: #1d1e22;  
+    font-size: 4em;  
+    text-align: center;  
+    cursor: pointer;  
+}  
+  
+
+.temperature-value span{  
+    color: #293251;  
+    font-size: 0.5em;  
+}  
+  
+
+  
+.temperature-description p{  
+    padding: 8px;  
+    margin: 0;  
+    color: #293251;  
+    text-align: center;  
+    font-size: 1.2em;  
+}  
+  
+
+  
+.location p{  
+    margin: 0;  
+    padding: 0;  
+    color: #293251;  
+    text-align: center;  
+    font-size: 0.8em;  
+} 
