--- a/style.css
+++ b/style.css
@@ -2,21 +2,18 @@ body {
   background-image: url("Pic/frank-mckenna-OD9EOzfSOh0-unsplash.jpg");
 }
 
-.d-none{
-  display:none;
+.d-none {
+  display: none;
 }
-.d-block{
+.d-block {
   display: block;
 }
 
-/* Top container
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-.top-container{
-  display:flex;
+.top-container {
+  display: flex;
   justify-content: space-between;
-  align-items:center;
+  align-items: center;
 }
-
 
 .notification {
   background-color: #f8d7da;
@@ -32,16 +29,16 @@ body {
 }
 
 .weather-container {
- 
   width: 300px;
   height: 280px;
 }
 
 .weather-icon {
+  
+  margin-left: 20%;
   width: 30pxauto;
   height: auto;
 }
-
 
 .temperature-value {
   width: 300px;
@@ -66,7 +63,7 @@ body {
   padding: 8px;
   margin: 5;
   color: #293251;
-  
+
   font-size: 1.2em;
 }
 
@@ -74,23 +71,19 @@ body {
   margin: 0;
   padding: 0;
   color: #293251;
-  
+
   font-size: 0.8em;
 }
 
-
-
 :root {
   --bg_main: #0a1f44;
-  --text_light:black;
+  --text_light: black;
   --text_med: #53627c;
   --text_dark: #1e2432;
   --red: #ff1e42;
   --darkred: #c3112d;
   --orange: #ff0000;
 }
-
-
 
 a {
   color: inherit;
@@ -105,7 +98,8 @@ input {
   -webkit-appearance: none;
 }
 
-button, input {
+button,
+input {
   border: none;
   background: none;
   outline: none;
@@ -129,8 +123,7 @@ ul {
   padding: 0 15px;
 }
 
-/* SECTION #1
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
 
 .top-banner {
   color: var(--text_light);
@@ -187,22 +180,18 @@ ul {
 /* SECTION #2
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-
-
 .ajax-section .cities {
   display: grid;
   grid-gap: 20px 40px;
   grid-template-columns: repeat(4, 1fr);
 }
 
-.ajax-section .city,.local-weather-btn {
- 
+.ajax-section .city,
+.local-weather-btn {
   border-radius: 5px;
   background: rgba(255, 255, 255, 0.37);
   color: var(--text_med);
 }
-
-
 
 .ajax-section figcaption {
   margin-top: 10px;
@@ -221,11 +210,12 @@ ul {
   font-size: 0.5em;
 }
 
-.ajax-section .city-name sup,.local-weather-btn sup {
+.ajax-section .city-name sup,
+.local-weather-btn sup {
   padding: 0.2em 0.6em;
   border-radius: 30px;
   color: var(--text_light);
-  background:whitesmoke
+  background: whitesmoke;
 }
 
 .ajax-section .city-icon {
@@ -256,11 +246,9 @@ ul {
 
 .cards {
   margin-right: 2%;
-  border-radius: 20px  ;
+  border-radius: 20px;
   background-color: rgba(255, 255, 255, 0.37);
 }
-
-  
 
 /* Modal
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -273,12 +261,13 @@ ul {
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
   justify-content: center;
   align-items: center;
+  text-align: center;
+  font-size: x-large;
 }
-
 
 /* The Close Button */
 .close {
@@ -294,34 +283,27 @@ ul {
   cursor: pointer;
 }
 
-
-
 /* Modal Header */
 .modal-header {
   border-radius: 20px;
   padding: 8px 16px;
   background-color: #5cb85ca1;
   color: white;
-  display:flex;
-
+  display: flex;
 }
 
 /* Modal Body */
 .modal-body {
-  
-  padding: px 16px;}
-
+  padding: px 16px;
+}
 
 /* Modal Content */
 .modal-content {
-  border-radius: 20px ;
+  border-radius: 20px;
   position: relative;
   background-color: #fefefe;
   margin: auto;
   padding: 0;
 
   width: 15%;
-  
-
 }
-
