--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 .d-none {
   display: none;
 }
+
 .d-block {
   display: block;
 }
@@ -34,7 +35,7 @@ body {
 }
 
 .weather-icon {
-  
+
   margin-left: 20%;
   width: 30pxauto;
   height: auto;
@@ -181,7 +182,7 @@ ul {
 .local-weather-btn {
   border-radius: 5px;
   background: rgba(255, 255, 255, 0.37);
-  color:#53627c;
+  color: #53627c;
 }
 
 .city-section figcaption {
@@ -191,7 +192,7 @@ ul {
 }
 
 .city-section .city-temp {
-  font-size: 5rem;
+  font-size: rem;
   font-weight: bold;
   margin-top: 10px;
   color: var(--text_dark);
@@ -227,25 +228,33 @@ ul {
 /* Modal
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0);
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
   justify-content: center;
   align-items: center;
   text-align: center;
-  font-size: x-large;
+  font-size: large;
 }
 
 /* The Close Button */
 .close {
-  color: white;
+  color:black;
   font-size: 28px;
   font-weight: bold;
 }
